0.1.7 - Fresh Coat of Paint - Added new dark mode color scheme to Pantra - Fixed back buttons being to close to the Pantra logo

--- a/src/Components/homePage/addCard/addCard.css
+++ b/src/Components/homePage/addCard/addCard.css
@@ -32,5 +32,5 @@
 
 .addCard.darkTheme:hover {
     border: 1px solid var(--accent);
-    background-color: color-mix(in srgb, black 90%, var(--darkBackground) 10%);
+    background-color: color-mix(in srgb, black 50%, var(--darkBackground) 50%);
 }
