--- a/src/Pages/Styles/locationItemPage.css
+++ b/src/Pages/Styles/locationItemPage.css
@@ -12,7 +12,7 @@
 }
 
 .locationItemPage .backBtn {
-    top: 4em;
+    top: 5em;
     left: 1em;
     cursor: pointer;
     position: absolute;
