--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 
 	/* Backgrounds */
 	--lightBackground: #f3f5f7; /* Base background color */
-	--darkBackground: #000000;
+	--darkBackground: #1d0b55;
 
-	--primary: #8c00ff;
+	--primary: #A725ED;
 	--accent: #EC02F7;
 	
 	/* Additionals */
